--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "start": "node index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "mongodb": "^3.5.8"
+  }
 }
