--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "iconv": "^3.0.0",
     "mongodb": "^3.5.8",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "nodejs-base64": "^1.0.3"
   }
 }
