--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "iconv": "^3.0.0",
     "mongodb": "^3.5.8",
     "node-fetch": "^2.6.0",
-    "nodejs-base64": "^1.0.3"
+    "nodejs-base64": "^1.0.3",
+    "xmlhttprequest": "^1.8.0"
   }
 }
