--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongodb": "^3.5.8",
     "node-fetch": "^2.6.0",
     "nodejs-base64": "^1.0.3",
+    "sha256": "^0.2.0",
     "xmlhttprequest": "^1.8.0"
   }
 }
