--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^3.5.8",
     "node-fetch": "^2.6.1",
     "nodejs-base64": "^1.0.3",
+    "requestify": "^0.2.5",
     "sha256": "^0.2.0",
     "xmlhttprequest": "^1.8.0"
   }
