--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodejs-base64": "^1.0.3",
     "requestify": "^0.2.5",
     "sha256": "^0.2.0",
+    "translate": "^1.2.1",
     "xmlhttprequest": "^1.8.0"
   }
 }
