--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deepai": "^1.0.15",
     "iconv": "^3.0.0",
     "mongodb": "^3.5.8",
+    "node-fetch": "^2.6.1",
     "nodejs-base64": "^1.0.3",
     "requestify": "^0.2.5",
     "sha256": "^0.2.0",
