--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"url": "git+https://github.com/Kicshikxo/moobot-command.git"
 	},
 	"keywords": [],
-	"author": "",
+	"author": "Kicshikxo",
 	"license": "ISC",
 	"bugs": {
 		"url": "https://github.com/Kicshikxo/moobot-command/issues"
