removed twitch-api-v5

--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
 		"express": "^4.17.1",
 		"iconv": "^3.0.1",
 		"iconv-lite": "^0.6.3",
-		"sha256": "^0.2.0",
-		"twitch-api-v5": "^2.0.4"
+		"sha256": "^0.2.0"
 	}
 }
