added is-url and ytsr dependencies

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
 		"express": "^4.17.1",
 		"follow-redirects": ">=1.14.7",
 		"iconv-lite": "^0.6.3",
-		"sha256": "^0.2.0"
+		"is-url": "^1.2.4",
+		"sha256": "^0.2.0",
+		"ytsr": "^3.6.0"
 	}
 }
