--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-DATABASE_URL='postgresql://<username>:<password>@<host>:5432/<dbname>'
+MOOBOT_DATABASE_URL='postgresql://<username>:<password>@<host>:5432/<dbname>'
