--- a/package.json
+++ b/package.json
@@ -1,25 +1,21 @@
 {
     "name": "moobot-commands",
-    "version": "0.0.1",
-    "description": "",
-    "author": "",
+    "version": "2.0.0",
     "private": true,
+    "description": "",
     "license": "WTFPL",
+    "author": "Kicshikxo",
     "scripts": {
         "build": "nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-        "start": "nest start",
-        "start:dev": "nest start --watch",
-        "start:debug": "nest start --debug --watch",
-        "start:prod": "node dist/main",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-        "test": "jest",
-        "test:watch": "jest --watch",
-        "test:cov": "jest --coverage",
-        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json"
+        "start": "nest start",
+        "start:debug": "nest start --debug --watch",
+        "start:dev": "nest start --watch",
+        "start:prod": "node dist/main"
     },
     "dependencies": {
+        "@nestjs/axios": "^2.0.0",
         "@nestjs/common": "^9.4.0",
         "@nestjs/config": "^2.3.1",
         "@nestjs/core": "^9.4.0",
@@ -33,40 +29,18 @@
         "@nestjs/schematics": "^9.1.0",
         "@nestjs/testing": "^9.4.0",
         "@types/express": "^4.17.17",
-        "@types/jest": "29.5.0",
         "@types/node": "18.15.11",
-        "@types/supertest": "^2.0.12",
         "@typescript-eslint/eslint-plugin": "^5.57.1",
         "@typescript-eslint/parser": "^5.57.1",
         "eslint": "^8.38.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^4.2.1",
-        "jest": "29.5.0",
         "prettier": "^2.8.7",
         "prisma": "^4.12.0",
         "source-map-support": "^0.5.21",
-        "supertest": "^6.3.3",
-        "ts-jest": "29.1.0",
         "ts-loader": "^9.4.2",
         "ts-node": "^10.9.1",
         "tsconfig-paths": "4.2.0",
         "typescript": "^5.0.4"
-    },
-    "jest": {
-        "moduleFileExtensions": [
-            "js",
-            "json",
-            "ts"
-        ],
-        "rootDir": "src",
-        "testRegex": ".*\\.spec\\.ts$",
-        "transform": {
-            "^.+\\.(t|j)s$": "ts-jest"
-        },
-        "collectCoverageFrom": [
-            "**/*.(t|j)s"
-        ],
-        "coverageDirectory": "../coverage",
-        "testEnvironment": "node"
     }
 }
