--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@nestjs/core": "^9.4.0",
         "@nestjs/platform-express": "^9.4.0",
         "@prisma/client": "^4.12.0",
+        "openai": "^3.2.1",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.8.0"
     },
