--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@nestjs/config": "^2.3.1",
         "@nestjs/core": "^9.4.0",
         "@nestjs/platform-express": "^9.4.0",
+        "@nestjs/swagger": "^6.3.0",
         "@prisma/client": "^4.12.0",
         "openai": "^3.2.1",
         "reflect-metadata": "^0.1.13",
